[gd_scene load_steps=4 format=3 uid="uid://cx7bkr0koklhv"]

[ext_resource type="Script" uid="uid://d3k3b3ekwngqr" path="res://Assets/Scripts/bullet.gd" id="1_owcbx"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_fekvp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owcbx"]
size = Vector2(10, 10)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_owcbx")

[node name="Bullet" type="Sprite2D" parent="."]
scale = Vector2(10, 10)
texture = SubResource("PlaceholderTexture2D_fekvp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_owcbx")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
